=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 v1.015

=over

=item *

Fixed build and installation system to work with a Perl that isn't
called 'perl' and in your path.  So, for example, if you've got a
binary called 'perl5.8.0' you can build Krang with it and install with
it.

=item *

Added initial support for Gentoo 1.4.3. [Peter]

=item *

Updated porting.pod with steps that might really work. [Sam]

=item *

Fixed a bug where an error occuring during preview triggered a
Krang::Cache error which corrupted the display. [Sam]

=item *

Improved error message generated when InstanceElementSet is set to an
element set that isn't installed. [Peter]

=item *

Fixed a ton of whitespace in module source files which was breaking
the POD output. [Peter]

=back

=head2 v1.014

=over

=item *

First public release of Krang!

=back