@@ -7,6 +7,9 @@ You can find the MySQL 4 RPMs here:
 Install the server, client, devel and shared RPMs.  After that you
 should be ready to run krang_install.  See INSTALL for details.
 
+NOTE: On Redhat9 Krang is setup to start on boot, via a link to
+bin/krang_ctl placed in /etc/init.d and activated using chkconfig.
+
 If you want to build Krang from a source distribution (ex:
 krang-1.013-src.tar.gz), you'll need the following RPMs installed.
 You can find them on your installation CDs or at a Redhat mirror (ex:
@@ -22,3 +25,4 @@ http://mirrors.kernel.org/redhat/redhat/linux/9/en/os/i386/RedHat/RPMS/).
      libjpeg-devel-6b-26.i386.rpm
      libungif-devel-4.1.0-15.i386.rpm
      libpng-devel-1.2.2-16.i386.rpm
+
